--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,15 +1,16 @@
 version: "2"
 sql:
   - engine: "mysql"
-    queries: "./db/query"
-    schema: "./db/ddl"
+    queries: "./db/sql/query.sql"
+    schema: "./db/sql/schema.sql"
     gen:
       go:
-        package: "db"
+        package: "sqlc"
         sql_package: "database/sql"
         out: "./db/sqlc"
         emit_interface: true
         emit_json_tags: true
         emit_pointers_for_null_types: true
         emit_result_struct_pointers: true
+        emit_prepared_queries: true
         overrides:
