--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,9 +5,9 @@ sql:
     schema: "./db/sql/schema.sql"
     gen:
       go:
-        package: "sqlc"
+        package: "gen"
         sql_package: "database/sql"
-        out: "./db/sqlc"
+        out: "./db/gen"
         emit_interface: true
         emit_json_tags: true
         emit_pointers_for_null_types: true
