--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,20 +6,22 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 1234
       MYSQL_DATABASE: cafe_manager
-      MYSQL_USER: root
+      MYSQL_USER: user
       MYSQL_PASSWORD: 1234
     ports:
       - 3306:3306
-  cafe_manager:
-    container_name: cafe_manager
-    image: cafe_manager:0.0.0
-    ports:
-     - 3000:3000
-    privileged: true
-    command: cafe_manager
-      - --dburl=mysql:3306
-      - --dbuser=root
-      - --dbpass=1234
-    network_mode: host
-    depends_on:
-      - mysql
+    volumes:
+      - ./db/sql/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+  # cafe_manager:
+  #   container_name: cafe_manager
+  #   image: cafe_manager:0.0.0
+  #   ports:
+  #    - 3000:3000
+  #   privileged: true
+  #   command: cafe_manager
+  #     - --dburl=mysql:3306
+  #     - --dbuser=root
+  #     - --dbpass=1234
+  #   network_mode: host
+  #   depends_on:
+  #     - mysql
