--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: cafe_manager
       MYSQL_USER: user
       MYSQL_PASSWORD: 1234
+      MYSQL_DATABASE: cafe
     ports:
       - 3306:3306
     volumes:
