--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 services:
-  mysql:
-    container_name: mysql
+  db_mysql:
+    container_name: db_mysql
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: 1234
@@ -12,19 +12,27 @@ services:
       - 3306:3306
     volumes:
       - ./db/sql/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+    networks:
+      - my-network
   cafe_manager:
     container_name: cafe_manager
     image: cafe_manager:0.0.0
-    ports:
-      - 3000:3000
+    build: 
+      context: .
+      dockerfile: Dockerfile
     privileged: true
     command: cafe_manager
-      - --dbaddr=mysql
+      - --dbaddr=db_mysql
       - --dbport=3306
-      - --dbuser=root
+      - --dbuser=user
       - --dbpass=1234
       - --dbname=cafe
       - --port=3000
-    network_mode: host
+    ports:
+      - 3000:3000
     depends_on:
-      - mysql
+      - db_mysql
+    networks:
+      - my-network
+networks:
+  my-network:
