--- a/db/sqlc.yaml
+++ b/db/sqlc.yaml
@@ -1,13 +1,13 @@
 version: "2"
 sql:
   - engine: "mysql"
-    queries: "./db/sql/query.sql"
-    schema: "./db/sql/schema.sql"
+    queries: "./sql/query.sql"
+    schema: "./sql/schema.sql"
     gen:
       go:
         package: "gen"
         sql_package: "database/sql"
-        out: "./db/gen"
+        out: "./gen"
         emit_interface: true
         emit_json_tags: true
         emit_pointers_for_null_types: true
